Fix banner background in dark mode

--- a/common/common.scss
+++ b/common/common.scss
@@ -4,7 +4,7 @@
   text-align: center;
   width: 100%;
   justify-content: center;
-  background: $primary-very-low;
+  background-color: var(--secondary);
   min-height: 123px;
   @media screen and (max-width: 450px) {
     min-height: 70px;
